Refactor run itineraries into separate models: Itinerary and RepeatingItinerary for both daily and recurring runs

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -43,6 +43,7 @@
   <div class="col-sm-12 col-md-6">
     <%= render 'details_panel', f: f, edit_mode: edit_mode %>
     <%= render 'mobility_panel', f: f, edit_mode: edit_mode %>
+    <%= render 'eta_settings_panel', f: f, edit_mode: edit_mode %>
     <%= render 'travel_trainings_panel', f:f, edit_mode: edit_mode %>
     <%= render 'funding_authorization_numbers_panel', f:f, edit_mode: edit_mode %>
   </div>
