--- a/app/views/trips/_form.html.haml
+++ b/app/views/trips/_form.html.haml
@@ -39,6 +39,7 @@
       = render 'trips/trip_parameters_panel', f: f, edit_mode: edit_mode
     .col-sm-12.col-md-6
       = render 'repeating_trips/repetition_panel', f: f
+      = render 'trips/eta_settings_panel', f: f, edit_mode: edit_mode
       = render 'trips/eligibility_panel', f: f, edit_mode: edit_mode
       = render 'trips/other_panel', f: f
       - if edit_mode == :show
@@ -53,6 +54,7 @@
       = render 'trips/trip_parameters_panel', f: f, edit_mode: edit_mode
     .col-sm-12.col-md-6
       = render 'trips/tracking_panel', f: f, edit_mode: edit_mode 
+      = render 'trips/eta_settings_panel', f: f, edit_mode: edit_mode
       = render 'trips/eligibility_panel', f: f, edit_mode: edit_mode
       = render 'trips/other_panel', f: f
       - if edit_mode == :show
