--- a/app/views/dispatchers/_run_manifest_table.html.haml
+++ b/app/views/dispatchers/_run_manifest_table.html.haml
@@ -35,13 +35,13 @@
       - run_id = run.id
       - itins = get_itineraries(run)
       - itins.each do |itin|
-        - trip = itin[:trip]
-        %tr.manifest-row{data: {trip_id: itin[:trip_id], id: itin[:id], leg_flag: itin[:leg_flag], customer_id: trip.customer.try(:id)}}
+        - trip = itin.trip
+        %tr.manifest-row{data: {trip_id: itin.trip_id, id: itin.itin_id, leg_flag: itin.leg_flag, customer_id: trip.customer.try(:id)}}
           %td
             - unless run.complete?
               %input.trip-selected{type: "checkbox"}
           %td{style: 'white-space: nowrap;'}
-            = itin[:leg_flag] == 1 ? 'PU' : 'DO'
+            = itin.leg_flag == 1 ? 'PU' : 'DO'
             - is_new = !trip.driver_notified && trip.date == Date.today
             %span.badge.new-trip-badge{style: (is_new ? "" : "display: none;")}
               New
@@ -51,30 +51,32 @@
                 Mobility?
 
             .pull-right
-              - if itin[:is_recurring]
+              - if trip.repeating_trip_id
                 %span.label.label-info
                   Recur
-          %td= itin[:customer]
-          %td= itin[:address]
-          %td= format_time_for_listing(itin[:time])
+          %td= trip.customer.try(:name)
+          %td= itin.address.try(:one_line_text)
+          %td= format_time_for_listing(itin.time)
           - @capacity_types_hash.each do |c_id, c_name|
-            %td{class: itin[:capacity_warning] ? "capacity_warning" : "", title: itin[:capacity_warning] ? vehicle_cannot_accommodate_warning : ""}= (itin[:occupancy] && itin[:occupancy][c_id].to_i || 0)
-          %td= itin[:comments]
+            %td{class: itin.capacity_warning ? "capacity_warning" : "", title: itin.capacity_warning ? vehicle_cannot_accommodate_warning : ""}= (itin.capacity && itin.capacity[c_id].to_i || 0)
+          %td= trip.notes
           %td
             - if TripResult::CANCEL_CODES_BUT_KEEP_RUN.include?(trip.trip_result.try(:code))
               %span.label.label-danger
                 = trip.trip_result.name
             - else
               = trip.trip_result.try(:name)
-          %td= simple_format(itin[:phone].join('<br>')) unless itin[:phone].empty?
+          %td
+            - phone = [format_phone_number(trip.customer.phone_number_1), format_phone_number(trip.customer.phone_number_2)].compact
+            = simple_format(phone.join('<br>')) unless phone.empty?
           %td
             = form_for trip, url: trip_notify_driver_path(trip), remote: true, method: :patch, html: { class: 'change-trip-driver-notified' } do |f|
               = f.check_box :driver_notified, :onclick => "$(this).parents('form').submit()"
           %td
-            = link_to trip_path(itin[:trip_id], from_dispatch: true, run_id: run_id), style: 'padding-right: 5px;', title: "View details" do 
+            = link_to trip_path(itin.trip_id, from_dispatch: true, run_id: run_id), style: 'padding-right: 5px;', title: "View details" do 
               %i.fa.fa-external-link
             - if can?(:edit, Trip)
-              = link_to edit_trip_path(itin[:trip_id], from_dispatch: true, run_id: run_id), style: 'padding-right: 5px;', title: 'Edit' do 
+              = link_to edit_trip_path(itin.trip_id, from_dispatch: true, run_id: run_id), style: 'padding-right: 5px;', title: 'Edit' do 
                 %i.fa.fa-pencil
 
 :javascript
