--- a/app/views/providers/_general.html.erb
+++ b/app/views/providers/_general.html.erb
@@ -46,6 +46,8 @@
 </fieldset>
 <hr>
 
+<%= render 'eta_configurations' %>
+
 <h2 class="section-header" id="advance_day_settings"><%=translate_helper("advance_day_scheduling")%></h2>
 <% if can? :edit, @provider %>
   <%= form_tag change_advance_day_scheduling_provider_path(@provider) do %>
