--- a/app/views/shared/_availability_table.html.haml
+++ b/app/views/shared/_availability_table.html.haml
@@ -152,7 +152,7 @@
     %tbody
       - row_data.each do |row|
         %tr{data: {date_value: row[:id]}}
-          - provider_hours = row[:provider_hours].compact
+          - provider_hours = (row[:provider_hours] || []).compact
           - is_on_leave = row[:is_on_leave]
           - is_disabled = row[:is_provider_unavailable] || is_on_leave
           - is_all_day = row[:is_all_day]
@@ -164,7 +164,7 @@
             - unless is_disabled
               = check_box_tag "all_day", "is_all_day", is_all_day, disabled: is_disabled || !can?(:edit, operatable), class: "is_all_day" 
           - ticks.each do |tick|
-            - is_provider_unavailable = provider_hours.any? ? !(provider_hours[0] <= tick[0] && provider_hours[1] > tick[0]) : false
+            - is_provider_unavailable = provider_hours.any? ? !(provider_hours[0] <= tick[0] && provider_hours[1] > tick[0]) : true
             - class_name = is_on_leave ? "is_on_leave" : (is_provider_unavailable ? "is_disabled" : (is_all_day ? "is_all_day_filled" : ""))
             - if class_name.blank?
               - hour_block = time_ranges.select{|x| x[0] <= tick[0] && x[1] > tick[0]}.first
