--- a/app/views/dispatchers/index.html.haml
+++ b/app/views/dispatchers/index.html.haml
@@ -6,6 +6,11 @@
     line-height: normal;
     margin: 0px;
   }
+
+  .itinerary_eta {
+    width: 80px;
+  }
+
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'dispatchers'
 .col-sm-12{style: 'padding: 0px;'}
   .pull-right
