--- a/app/views/dispatchers/_run_manifest_table.html.haml
+++ b/app/views/dispatchers/_run_manifest_table.html.haml
@@ -1,6 +1,6 @@
 :ruby
   @capacity_types_hash = CapacityType.by_provider(current_provider).order(:name).pluck(:id,:name).to_h
-
+  run_date_today_or_future = run.date.today? || run.date.future?
 :css
   .new-trip-badge {
     background-color: red;
@@ -19,6 +19,8 @@
       %th= translate_helper(:run_manifest_table_header_customer)
       %th= translate_helper(:run_manifest_table_header_address)
       %th= translate_helper(:run_manifest_table_header_scheduled_time)
+      - if run_date_today_or_future
+        %th.itinerary_eta= translate_helper(:run_manifest_table_header_eta)
       - @capacity_types_hash.each do |c_id, c_name|
         %th= c_name
       %th= translate_helper(:run_manifest_table_header_comments)
@@ -29,7 +31,7 @@
   %tbody
     - if trips.empty?
       %tr
-        %td{colspan: 14}= translate_helper(:empty_trips)
+        %td{colspan: 15}= translate_helper(:empty_trips)
     - else
       - vehicle_cannot_accommodate_warning = translate_helper(:vehicle_cannot_accommodate_warning)
       - run_id = run.id
@@ -57,6 +59,8 @@
           %td= trip.customer.try(:name)
           %td= itin.address.try(:one_line_text)
           %td= format_time_for_listing(itin.time)
+          - if run_date_today_or_future
+            %td.itinerary_eta= format_time_for_listing(itin.eta_time)
           - @capacity_types_hash.each do |c_id, c_name|
             %td{class: itin.capacity_warning ? "capacity_warning" : "", title: itin.capacity_warning ? vehicle_cannot_accommodate_warning : ""}= (itin.capacity && itin.capacity[c_id].to_i || 0)
           %td= trip.notes
