Update ETA on Dispatch screen

--- a/app/views/dispatchers/_run_manifest_table.html.haml
+++ b/app/views/dispatchers/_run_manifest_table.html.haml
@@ -60,7 +60,7 @@
           %td= itin.address.try(:one_line_text)
           %td= format_time_for_listing(itin.time)
           - if run_date_today_or_future
-            %td.itinerary_eta= format_time_for_listing(itin.eta_time)
+            %td.itinerary_eta= format_time_for_listing(itin.eta)
           - @capacity_types_hash.each do |c_id, c_name|
             %td{class: itin.capacity_warning ? "capacity_warning" : "", title: itin.capacity_warning ? vehicle_cannot_accommodate_warning : ""}= (itin.capacity && itin.capacity[c_id].to_i || 0)
           %td= trip.notes
