--- a/app/views/dispatchers/eta.js.haml
+++ b/app/views/dispatchers/eta.js.haml
@@ -8,4 +8,4 @@
   
 
 var eta_info = #{eta_info ? eta_info.to_json.html_safe : {}}; 
-for(var k in eta_info) { var itin = eta_info[k]; $('tr[data-id=' + k + '] td.itinerary_eta').text(itin.eta); }
+for(var k in eta_info) { var itin = eta_info[k]; $('tr[data-id=' + k + '] td.itinerary_eta').text(itin.eta || ""); }
