--- a/app/views/recurring_dispatchers/index.html.haml
+++ b/app/views/recurring_dispatchers/index.html.haml
@@ -101,15 +101,23 @@
     panel.find('.floatThead-wrapper').show();
   }
 
-  function reverse_collapse_panel(panel) {
-    panel.find('.panel-body').slideUp();
+  function reverse_collapse_panel(panel, callback) {
+    panel.find('.panel-body').slideUp(100, function() {
+      if(callback) {
+        callback();
+      }
+    });
     panel.find('.panel-expand-collapse-reverse').addClass('panel-collapsed');
     panel.find('.panel-expand-collapse-reverse i').removeClass('fa-chevron-down').addClass('fa-chevron-up'); 
     panel.find('.floatThead-wrapper').hide();
   }
 
-  function reverse_expand_panel(panel) {
-    panel.find('.panel-body').slideDown();
+  function reverse_expand_panel(panel, callback) {
+    panel.find('.panel-body').slideDown(100, function() {
+      if(callback) {
+        callback();
+      }
+    });
     panel.find('.panel-expand-collapse-reverse').removeClass('panel-collapsed');
     panel.find('.panel-expand-collapse-reverse i').removeClass('fa-chevron-up').addClass('fa-chevron-down'); 
     panel.find('.floatThead-wrapper').show();
@@ -274,6 +282,9 @@
     splitter = $('#dispatch_runs_trips').height(splitter_height).split({
       position: '80%',
       limit: 40,
+      onDragEnd: function() {
+        update_trips_panel_height();
+      },
       onDrag: function(e) {
         var collapseButton = $('#unassigned_trips_container').find('.panel-expand-collapse-reverse');
         var panel = $('#unassigned_trips_panel');
@@ -281,7 +292,9 @@
         if($('#unassigned_trips_container').height() > 40) {
           if(collapseButton.hasClass('panel-collapsed')) {
             is_collapsed = false;
-            reverse_expand_panel(panel);
+            reverse_expand_panel(panel, function() {
+              update_trips_panel_height();
+            });
           }
         } else if($('#unassigned_trips_container').height() <= 40) {
           if(!collapseButton.hasClass('panel-collapsed')) {
@@ -291,8 +304,6 @@
         }
         
         localStorage.setItem('dispatch_unassigned_trips_collapsed', (is_collapsed ? '0' : '1')); 
-
-        //update trips table container height so fixedHeader works
         update_trips_panel_height();
       }
     });
