--- a/app/views/application_settings/index.html.erb
+++ b/app/views/application_settings/index.html.erb
@@ -16,13 +16,13 @@
       <td><%= translate_helper("application_settings_password_archiving_count") %></td>
       <td><%= ApplicationSetting.all['devise.password_archiving_count'] %></td>
       <td><%= Devise.password_archiving_count %></td>
-      <td><%= ApplicationSetting.defaults['devise.password_archiving_count'] %></td>
+      <td><%= ApplicationSetting['devise.password_archiving_count'] %></td>
     </tr>
     <tr>
       <td><%= translate_helper("application_settings_expire_password_after") %> <sup><a href="#fn1">1</a></sup></td>
       <td><%= (ApplicationSetting.all['devise.expire_password_after'] || 0).to_i / 1.day %> days</td>
       <td><%= (Devise.expire_password_after || 0).to_i / 1.day %> days</td>
-      <td><%= (ApplicationSetting.defaults['devise.expire_password_after'] || 0).to_i / 1.day %> days</td>
+      <td><%= (ApplicationSetting['devise.expire_password_after'] || 0).to_i / 1.day %> days</td>
     </tr>
   </tbody>
 </table>
