--- a/app/views/trips/_form.html.haml
+++ b/app/views/trips/_form.html.haml
@@ -27,9 +27,8 @@
 
   -# the customer id needs to be passed in this action
   = f.hidden_field :customer_id, class: 'trip-customer-id'
-  - unless @is_repeating_trip
-    = f.hidden_field :direction
-    = hidden_field_tag "trip[outbound_trip_id]", @trip.outbound_trip.try(:id)
+  = f.hidden_field :direction
+  = f.hidden_field :linking_trip_id if @trip.outbound_trip
 
   - if @is_repeating_trip 
     .col-sm-12.col-md-6
