--- a/app/views/repeating_trips/_list.html.haml
+++ b/app/views/repeating_trips/_list.html.haml
@@ -3,6 +3,7 @@
     %tr
       %th
       %th= translate_helper("customer_column")
+      %th= translate_helper("trip_direction_column")
       %th= translate_helper("pickup_address_column") 
       %th= translate_helper("pickup_time_column") 
       %th= translate_helper("dropoff_address_column")
@@ -15,6 +16,18 @@
           = link_to(translate_helper("view"), repeating_trip_path(trip))
         %td
           = link_to trip.customer.name, trip.customer, :title => translate_helper("view_customer_record_link_text") 
+        %td
+          = trip.is_return? ? translate_helper("return_trip") : translate_helper("outbound_trip")
+          - if trip.is_linked?
+            %br/
+            (#{translate_helper(:linking_to)}:
+            - if trip.is_return?
+              %a{:href => "#{repeating_trip_path(trip.outbound_trip)}"}
+                = trip.outbound_trip.id
+            - else
+              %a{:href => "#{repeating_trip_path(trip.return_trip)}"}
+                = trip.return_trip.id
+            )
         %td
           = trip.pickup_address.try :address_text
         %td
