--- a/app/views/repeating_trips/_list.html.haml
+++ b/app/views/repeating_trips/_list.html.haml
@@ -15,7 +15,10 @@
         %td
           = link_to(translate_helper("view"), repeating_trip_path(trip))
         %td
-          = link_to trip.customer.name, trip.customer, :title => translate_helper("view_customer_record_link_text") 
+          - customer_name = trip.customer.name
+          .hidden
+            = customer_name
+          = link_to customer_name, trip.customer, :title => translate_helper("view_customer_record_link_text") 
         %td
           = trip.is_return? ? translate_helper("return_trip") : translate_helper("outbound_trip")
           - if trip.is_linked?
@@ -31,11 +34,20 @@
         %td
           = trip.pickup_address.try :address_text
         %td
+          .hidden
+            = trip.pickup_time.try(:strftime, "%H:%M")
           = format_time_for_listing trip.pickup_time
         %td
           = trip.dropoff_address.try :address_text
         %td
+          .hidden
+            = trip.appointment_time.try(:strftime, "%H:%M")
           = format_time_for_listing trip.appointment_time if trip.appointment_time
         %td
           = trip.schedule.to_s rescue nil
+
+:javascript
+  $(function() {
+    $('table').dataTable();
+  });
     
