--- a/app/views/dispatchers/eta.js.haml
+++ b/app/views/dispatchers/eta.js.haml
@@ -9,3 +9,6 @@
 
 var eta_info = #{eta_info ? eta_info.to_json.html_safe : {}}; 
 for(var k in eta_info) { var itin = eta_info[k]; $('tr[data-id=' + k + '] td.itinerary_eta').text(itin.eta || ""); }
+
+var run_panel = $("#run_trips_panel_#{@run.id}");
+var slack_chart_div = run_panel.find('.slack_chart').replaceWith("#{j render('slack_chart', run: @run)}");
