--- a/app/assets/stylesheets/dispatch.css
+++ b/app/assets/stylesheets/dispatch.css
@@ -41,8 +41,8 @@
 
 .panel-success > .panel-heading {
   color: white;
-  background-color: #4c38d8;
-  border-color: #4c38d8;
+  background-color: #8280ff;
+  border-color: #8280ff;
 }
 
 .panel-warning > .panel-heading {
