--- a/app/views/runs/_non_editable_trip_fields.html.erb
+++ b/app/views/runs/_non_editable_trip_fields.html.erb
@@ -9,7 +9,7 @@
   <% end %>
 </td>
 <td>
-  <%= link_to trip.customer.name, trip.customer, :title => translate_helper("view_customer_record_link_text") %>
+  <%= link_to trip.customer.try(:name), trip.customer, :title => translate_helper("view_customer_record_link_text") %>
 </td>
 <td>
   <%= trip.pickup_address.try :address_text %>
