--- a/app/views/trips/_row.html.haml
+++ b/app/views/trips/_row.html.haml
@@ -9,7 +9,7 @@
   %td
     = format_time_for_listing_day trip.pickup_time
   %td
-    = link_to trip.customer.name, trip.customer, :title => translate_helper("view_customer_record_link_text")
+    = link_to trip.customer.try(:name), trip.customer, :title => translate_helper("view_customer_record_link_text")
   %td
     - if trip.customer.try(:phone_number_1)
       = format_phone_number(trip.customer.try(:phone_number_1))
