--- a/app/views/trips/_trip_form.html.erb
+++ b/app/views/trips/_trip_form.html.erb
@@ -3,7 +3,7 @@
     <%= trip.pickup_time.strftime("%l:%M %p") %>
   </td>
   <td>
-    <%= trip.customer.name %>
+    <%= trip.customer.try(:name) %>
   </td>
   <td>
     <% if trip.pickup_address.present? %>
