--- a/app/views/reports/_manifest_trip.html.erb
+++ b/app/views/reports/_manifest_trip.html.erb
@@ -1,7 +1,7 @@
 <table class="trip">
   <tr class="customer">
     <td class="name">
-      <%= trip.customer.name %><span class='address_separator'></span>
+      <%= trip.customer.try(:name) %><span class='address_separator'></span>
       <%= format_phone_number(trip.customer.phone_number_1) %><span class='address_separator'></span>
       <%= format_phone_number(trip.customer.phone_number_2) %>
     </td>
