--- a/app/views/trips/trips_requiring_callback.html.erb
+++ b/app/views/trips/trips_requiring_callback.html.erb
@@ -13,7 +13,7 @@
 
 <% @trips.each do |trip| %>
   <tr>
-    <td><%= trip.customer.name %></td>
+    <td><%= trip.customer.try(:name) %></td>
     <td><%= trip.pickup_time.to_s %></td>
     <td><%= display_trip_result trip.trip_result %></td>
     <td><%= trip.called_back_at ? trip.called_back_at : translate_helper("not_yet_called") %></td>
