--- a/app/views/trips/unscheduled.html.erb
+++ b/app/views/trips/unscheduled.html.erb
@@ -15,7 +15,7 @@
 
 <% @trips.each do |trip| %>
   <tr>
-    <td><%= trip.customer.name %></td>
+    <td><%= trip.customer.try(:name) %></td>
     <td><%= trip.pickup_time.to_s %></td>
     <td><%= trip.trip_purpose_name %></td>
     <td><%= trip.pickup_address.text %></td>
