--- a/app/views/runs/_date_time_panel.html.haml
+++ b/app/views/runs/_date_time_panel.html.haml
@@ -15,12 +15,12 @@
             .input-group-btn
               %button.btn.btn-default{:type => "button"}
                 = image_tag "calendar-clock.png"
-    .form-group.col-sm-12
+    .form-group.col-sm-12.scheduled_time
       .col-sm-3
         = f.label :scheduled_start_time, translate_helper("scheduled_start_time")
       .col-sm-9
         = render 'shared/time_inputs', field_name: :scheduled_start_time, time: @run.scheduled_start_time, f: f
-    .form-group.col-sm-12
+    .form-group.col-sm-12.scheduled_time
       .col-sm-3
         = f.label :scheduled_end_time, translate_helper("scheduled_end_time")
       .col-sm-9
