--- a/app/views/dispatchers/_runs_panel.html.haml
+++ b/app/views/dispatchers/_runs_panel.html.haml
@@ -3,7 +3,7 @@
     .pull-right{style: 'padding-right: 0px;'}
       - if can?(:new, Run)
         %span.dispatch-action
-          = link_to new_run_path(from_dispatch: true), style: 'color: white;', title: translate_helper("new_run_link_text") do 
+          = link_to new_run_path(from_dispatch: true, date: @run_trip_day), style: 'color: white;', title: translate_helper("new_run_link_text") do 
             %i.fa.fa-plus
       %span.panel-close-all-runs.dispatch-action{title: 'Close opened run panels'}
         %i.fa.fa-remove
