--- a/app/views/providers/_general.html.erb
+++ b/app/views/providers/_general.html.erb
@@ -52,6 +52,8 @@
 </fieldset>
 <hr>
 
+<%= render 'fare_configurations' %>
+
 <%= render 'eta_configurations' %>
 
 <h2 class="section-header" id="advance_day_settings"><%=translate_helper("advance_day_scheduling")%></h2>
