--- a/app/views/trips/_fare_panel.html.haml
+++ b/app/views/trips/_fare_panel.html.haml
@@ -18,12 +18,12 @@
           = ff.select :pre_trip, [["Pre-trip", true], ["Post-trip", false]],  {}, {class: 'form-control'}
     
     - fare = @trip.fare
-    .form-group.col-sm-12.trip_donation{style: fare.is_donation? ? "": "display: none;"}
+    .form-group.col-sm-12.trip_donation{style: fare.try(:is_donation?) ? "": "display: none;"}
       .col-sm-3
         = f.label :customer_donation, translate_helper("trip_donation")
       .col-sm-6.col-md-3
         = number_field_tag :customer_donation, nil, min: 0, step: 0.01, :size => 8, class: 'form-control', value: params[:customer_donation] || @trip.donation.try(:amount)
-    .form-group.col-sm-12.trip_payment{style: fare.is_payment? ? "": "display: none;"}
+    .form-group.col-sm-12.trip_payment{style: fare.try(:is_payment?) ? "": "display: none;"}
       .col-sm-3
         = f.label :fare_amount, translate_helper("trip_payment")
       .col-sm-6.col-md-3
