update trips panel size

--- a/app/views/dispatchers/index.html.haml
+++ b/app/views/dispatchers/index.html.haml
@@ -282,6 +282,8 @@
        return $table.closest('.panel-body');
       }
     });
+
+    update_trips_panel_height();
   }
 
   function change_trips_trip_result(trip_ids, result_id, reason) {
