Add validations to stop unscheduing finished trips and move finished itinerary

--- a/app/views/dispatchers/_run_trips_panel.html.haml
+++ b/app/views/dispatchers/_run_trips_panel.html.haml
@@ -4,6 +4,9 @@
       - unless run.complete?
         = render 'trip_result_dropdown'
         = render 'unschedule_trip_dropdown'
+        %span.dispatch-action.publish_manifest{style: (run.manifest_changed ? "" : "display: none;")}
+          = link_to publish_manifest_dispatchers_path(run_id: run.id), title: 'Publish Manifest', method: :put, data: {confirm: "Are you sure to publish the manifest?"}, remote: true do 
+            %i.fa.fa-cloud-upload{style: 'color: red;'}
         - if run.date.today? || run.date.future?
           %span.dispatch-action
             = link_to eta_dispatchers_path(run_id: run.id), title: 'Recalculate ETA', style: 'color: white;', remote: true do 
@@ -48,6 +51,18 @@
       = render 'dispatchers/run_manifest_table', run: run, trips: run.trips
 
 - unless run.complete?
+  - unpublishable_reasons = run.manifest_unpublishable_reasons
+  - if unpublishable_reasons.any?
+    :javascript 
+      // show manifest unpublishable reason
+      var unpublishable_reasons = "#{unpublishable_reasons.join(', ')}";
+
+      $("#run_trips_panel_#{run.id}").on("click", ".publish_manifest a", function(e){ 
+        e.preventDefault(); 
+        show_alert_dialog("Manifest can not be published due to: " + unpublishable_reasons);
+        return false; 
+      });
+
   :javascript
     $("#run_trips_panel_#{run.id}").droppable({
       tolerance: 'pointer',
@@ -86,7 +101,7 @@
               $("#run_trips_panel_" + run_id + " table tbody").sortable('cancel');
               bootbox.alert('Dropoff cannot be scheduled before the pickup');
             } else {
-              change_run_manifest_order(run_id, new_manifest_order);
+              change_run_manifest_order(run_id, itin_id, new_manifest_order);
             }
             }, 300);
         } else {
