scroll run manifest panel when click its name in runs panel

--- a/app/views/dispatchers/index.html.haml
+++ b/app/views/dispatchers/index.html.haml
@@ -98,7 +98,7 @@
 
   // scroll to a rendered run manifest panel
   function scroll_to_run_trips_panel(run_id) {
-    $('html, body').animate({
+    $('#dispatch_runs_container').animate({
       scrollTop: $("#run_trips_panel_" + run_id).offset().top
     }, 1000);
   }
